hphp/test/zend/good/ext/standard/tests/strings/bug24281.php.skipif
<?php
<<__EntryPoint>> function main() {
if (version_compare(zend_version(), '2.0.0-dev', '<')) die('SKIP PHP5 functionality');
}
