hphp/test/zend/bad/tests/lang/bug20175.php.skipif
<?php if (version_compare(zend_version(),'2.0.0-dev','<')) die('skip ZE1 does not have static class members'); ?>